Remove unused databags update templates

--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -1,6 +1,6 @@
 {% from "macros/question.html" import render_question %}
 {% macro render_topic(item, alternative) %}
-{% set b_alt = 'topics+'+alternative %}
+{% set b_alt = 'topics' %}
 {% set t = bag(b_alt, item._id) %}
 <div class="item">
   <h3 class="text-primary">
