--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -13,7 +13,7 @@
 
     <div class="collapse navbar-collapse burger-menu" id="navbarSupportedTopicsContent">
       <ul class="nav nav-pills flex-column">
-	{% set topicbag = 'topics+' + this.alt %}
+	{% set topicbag = 'topics' %}
 	{% for id, item in bag(topicbag).items() %}
 	<li{% if this.is_child_of(item.path) %} class="nav-item" {% else %} class="toc-entry toc-h2 nav-item"{% endif %}>
       <a role="button" {% if this.is_child_of(item.path) %} class="side-nav active" {% else %} class="side-nav" {% endif %}
@@ -35,7 +35,7 @@
   <nav class="d-none d-sm-block section-nav bg-white sidetopics sticky" id="sidenav-topics">
 	  <h4 class="text-primary pl-4">{{ _("Topics") }}</h4>
     <ul class="nav nav-pills flex-column">
-      {% set topicbag = 'topics+' + this.alt %}
+      {% set topicbag = 'topics' %}
       {% for id, item in bag(topicbag).items() %}
       <li{% if this.is_child_of(item.path) %} class="toc-entry toc-h2 active nav-item" {% else %} class="toc-entry toc-h2 nav-item" {% endif %}>
         <a role="button" {% if this.is_child_of(item.path) %} class="nav-link active" {% else %} class="nav-link" {% endif %}
