--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -9,8 +9,13 @@
   <div id="{{ t.control }}" role="tabpanel" data-parent="#topics" class="anchor-spacer">
     <div id="{{ t.control }}Accordion" data-children=".question">
       <h5 class="text-muted mb-3 p-0 {{ bag('alternatives', alternative, 'direction') }}">{{ item.title }}</h5>
-      {% for q in item.children.order_by('key') %}
-        {{ render_question(q, item._id, alternative) }}
+      {% for q in item.children.include_undiscoverable(true).order_by('key') %}
+        {% if q._model == 'redirect' %}
+          {% set r = site.get(q.target) %}
+          {{ render_question(r, item._id, alternative) }}
+        {% else %}
+          {{ render_question(q, item._id, alternative) }}
+        {% endif %}
       {% endfor %}
     </div>
   </div>
