--- a/templates/glossary.html
+++ b/templates/glossary.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
-<div>
-  {% for item in this.children %}
-    <a href="{{ item.path }}" >{{ item.title }}</a>
-  {% endfor %}
-</div>
+{% block body %}
+  <div>
+    {% for item in this.children %}
+      <h5 class="text-muted mb-3 p-0 {{ bag('alternatives', this.alt, 'direction') }}">
+        <a href="{{ item.path|url(alt=this.alt) }}" >{{ item.term }}</a>
+      </h5>
+    {% endfor %}
+  </div>
+{% endblock %}
