--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,11 @@
   <div class="page">
     <div class="jumbotron jumbotron-fluid bg-primary text-white mb-md-5">
       <div class="container-fluid text-center">
-        <h1 class="display-4 no-border font-weight-light pt-5 pb-4">{{ this.title }}</h1>
+        {% if this.title %}
+          <h1 class="display-4 no-border font-weight-light pt-5 pb-4">{{ this.title }}</h1>
+        {% elif this.term %}
+          <h1 class="display-4 no-border font-weight-light pt-5 pb-4">{{ this.term }}</h1>
+        {% endif %}
         <!-- {% include 'search.html' %} -->
       </div>
     </div>
