--- a/templates/macros/topic.html
+++ b/templates/macros/topic.html
@@ -11,7 +11,7 @@
       <h5 class="text-muted mb-3 p-0 {{ bag('alternatives', alternative, 'direction') }}">{{ item.title }}</h5>
       {% for q in item.children.include_undiscoverable(true).order_by('key') %}
         {% if q._model == 'redirect' %}
-          {% set r = site.get(q.target) %}
+          {% set r = site.get(q.target, alt=alternative) %}
           {{ render_question(r, item._id, alternative) }}
         {% else %}
           {{ render_question(q, item._id, alternative) }}
