--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{{ '/static/css/eoy.css'|asseturl }}">
 <link rel="stylesheet" href="{{ '/static/fonts/fontawesome/css/all.min.css'|asseturl }}" rel="stylesheet">
 
-<title>{% block title %}{{ this.title }}{% endblock %} | {{ _("Tor Project | Support") }}</title>
+<title>{% block title %}{{ this.title }} {{ this.term }} {% endblock %} | {{ _("Tor Project | Support") }}</title>
 <body class="no-gutters" data-spy="scroll" data-target="#sidenav-topics" id="topics" data-children=".item">
   <header>
     {% include 'navbar.html' %}
