Added the chat ballon
added the chat ballon

--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -48,6 +48,16 @@
         {{ _(item.label) }}</a>
       </li>
       {% endfor %}
+  <div class="mt-4 pl-4">
+    <h4 class="text-primary">Get in Touch</h4>
+    <div class="card-body h-100% w-50% " style="background:#F2ECF4; max-width:60%; text-align:center;">
+      <i class="fas fa-comments mx-auto mt-4" style="font-size: 3em; color:#7C4697;"></i>
+<div class=" pt-2" style="text-align: center;">
+  <p class="toc-entry toc-h2 nav-item mb-0" >{{ ("Chat with us live!") }}</p>
+  <a href="https://webchat.oftc.net/?channels=tor" class="pt-1" style="color:#7C4697; text-decoration: underline;" >{{ ("Join us on IRC") }}</a>
+</div>
+    </div>
+  </div>
     </ul>
   </nav>
 </div>
