--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -50,7 +50,7 @@
       {% endfor %}
   <div class="mt-4 pl-4">
     <h4 class="text-primary">Get in Touch</h4>
-    <div class="card-body h-100% w-50% " style="background:#F2ECF4; max-width:60%; text-align:center;">
+    <div class="card-body" style="background:#F2ECF4; max-width:55%; text-align:center;">
       <i class="fas fa-comments mx-auto mt-4" style="font-size: 3em; color:#7C4697;"></i>
 <div class=" pt-2" style="text-align: center;">
   <p class="toc-entry toc-h2 nav-item mb-0" >{{ ("Chat with us live!") }}</p>
