--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -4,7 +4,7 @@
 	{{ _("Topics") }}
     </a>
     <label class="side-toggler" for="menu-toggle">
-      <a class="btn btn-lg outline-primary text-primary navbar-toggler chevron" data-toggle="collapse" data-target="#navbarSupportedTopicsContent" aria-controls="navbarSupportedTopicsContent" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="btn btn-lg outline-primary text-primary navbar-toggler chevron collapsed" data-toggle="collapse" data-target="#navbarSupportedTopicsContent" aria-controls="navbarSupportedTopicsContent" aria-expanded="false" aria-label="Toggle navigation">
     	<span class="oi oi-chevron-top chevron-up"></span>
     	<span class="oi oi-chevron-bottom chevron-down"></span>
       </a>
