--- a/templates/word.html
+++ b/templates/word.html
@@ -22,7 +22,7 @@
         <ul class="list-group list-group-flush">
            <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to this page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
            <li class="list-group-item">
-             <a href="https://github.com/torproject/support/edit/master/content{{ this.path }}/contents.lr">{{ _("Edit this page") }}</a> -
+             <a href="https://gitlab.torproject.org/tpo/web/support/-/edit/main/content{{ this.path }}/contents.lr">{{ _("Edit this page") }}</a> -
              <a href="https://support.torproject.org/misc/bug-or-feedback/">{{ _("Suggest Feedback") }}</a> -
              <a href="{{ this.path|url(alt=this.alt) }}">{{ _("Permalink") }}</a>
             </li>
