--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -52,8 +52,8 @@
         <h4 class="text-primary">{{ _("Get in Touch") }}</h4>
         <i class="fas fa-comments h1 text-primary mx-auto"></i>
         <div class=" pt-2" style="text-align: center;">
-          <p class="toc-entry toc-h2 nav-item mb-0" >{{ ("Chat with us live!") }}</p>
-          <a href="https://webchat.oftc.net/?channels=tor" target="_blank" class="pt-1">{{ ("Join us on IRC") }}</a>
+          <p class="toc-entry toc-h2 nav-item mb-0" >{{ _("Chat with us live!") }}</p>
+          <a href="https://webchat.oftc.net/?channels=tor" target="_blank" class="pt-1">{{ _("Join us on IRC") }}</a>
         </div>
     </div>
 
