Add DuckDuckGo search bar

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
         {% elif this.term %}
           <h1 class="display-4 no-border font-weight-light pt-5 pb-4">{{ this.term }}</h1>
         {% endif %}
-        <!-- {% include 'search.html' %} -->
+        {% include 'search.html' %}
       </div>
     </div>
     <div class="container-fluid">
