--- a/templates/search.html
+++ b/templates/search.html
@@ -1,8 +1,9 @@
 <div class="row">
-  <form class="form-inline form-wide justify-content-md-center" id="searchForm" action="https://search.onionlab.eu/support-staging/{{ this.alt }}" method="GET">
+  <form class="form-inline form-wide justify-content-md-center" id="searchForm" action="https://duckduckgo.com/" method="GET">
     <div class="col-md-4 col-sm-12">
       <div class="col-12 input-group p-0">
-	      <input id="q" class="form-control form-wide rounded-left border-0" type="text" name="q" placeholder="{{ _('Search') }} .." aria-label="{{ _('Search') }}">
+	      <input id="q" class="form-control form-wide rounded-left border-0" type="text" name="q" placeholder="{{ _('Search using DuckDuckGo') }} ..." aria-label="{{ _('Search') }}">
+        <input type="hidden" name="sites" value="support.torproject.org/{{ this.alt }}">
         <span class="input-group-btn">
           <button class="btn btn-light" type="submit"><span class="oi oi-magnifying-glass text-secondary"></span></button>
         </span>
