Remove the {{this.alt}} from DuckDuckGo search

--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,7 @@
     <div class="col-md-4 col-sm-12">
       <div class="col-12 input-group p-0">
 	      <input id="q" class="form-control form-wide rounded-left border-0" type="text" name="q" placeholder="{{ _('Search using DuckDuckGo') }} ..." aria-label="{{ _('Search') }}">
-        <input type="hidden" name="sites" value="support.torproject.org/{{ this.alt }}">
+        <input type="hidden" name="sites" value="support.torproject.org">
         <span class="input-group-btn">
           <button class="btn btn-light" type="submit"><span class="oi oi-magnifying-glass text-secondary"></span></button>
         </span>
