--- a/templates/macros/question.html
+++ b/templates/macros/question.html
@@ -5,7 +5,7 @@
       {{ item.title }}
     </a>
   </h4>
-  <div id="{{ q_id }}" class="collapse show anchor-spacer exp" role="tabpanel">
+  <div id="{{ q_id }}" class="collapse show anchor-spacer expand" role="tabpanel">
     {{ item.description|safe }}
 
     {% if q_id == "https-1" %}
