Add more quotes to fix a js syntax error in template
within the context of jinja, `{{ _('expand') }}` produces a string,
but that templates to `expand` which isn't quoted and therefore isn't
a string in javascript

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,10 +12,10 @@
 <script>
   function change(event) {
     let btn = event.currentTarget;
-    if (btn.innerHTML == {{ _('expand') }}) {
-      btn.innerHTML = {{ _('collapse') }};
+    if (btn.innerHTML == "{{ _('expand') }}") {
+      btn.innerHTML = "{{ _('collapse') }}";
   } else {
-    btn.innerHTML = {{ _('expand') }};
+    btn.innerHTML = "{{ _('expand') }}";
     }
   }
 </script>
