--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,7 @@
 	      <input id="q" class="form-control form-wide rounded-left border-0" type="text" name="q" placeholder="{{ _('Search using DuckDuckGo') }} ..." aria-label="{{ _('Search') }}">
         <input type="hidden" name="sites" value="support.torproject.org">
         <span class="input-group-btn">
-          <button class="btn btn-light" type="submit"><span class="oi oi-magnifying-glass text-secondary"></span></button>
+          <button class="btn btn-light" type="submit"><span class="fa fa-magnifying-glass text-secondary"></span></button>
         </span>
       </div>
     </div>
