Change search bar width

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,6 @@
 <div class="row">
   <form class="form-inline form-wide justify-content-md-center" id="searchForm" action="https://duckduckgo.com/" method="GET">
-    <div class="col-md-4 col-sm-12">
+    <div class="col-md-5">
       <div class="col-12 input-group p-0">
 	      <input id="q" class="form-control form-wide rounded-left border-0" type="text" name="q" placeholder="{{ _('Search using DuckDuckGo') }} ..." aria-label="{{ _('Search') }}">
         <input type="hidden" name="sites" value="support.torproject.org">
