--- a/templates/macros/question.html
+++ b/templates/macros/question.html
@@ -1,11 +1,11 @@
 {% macro render_question(item, q_id, t_id, alternative) %}
 <div class="question {{ bag('alternatives', alternative, 'direction') }}">
   <h4 class="text-primary">
-    <a data-toggle="collapse" href="#{{ q_id }}" data-target="#{{ q_id }}" role="button" aria-expanded="false" aria-controls="{{ q_id }}">
+    <a data-toggle="collapse" href="#{{ t_id }}_{{ q_id }}" data-target="#{{ t_id }}_{{ q_id }}" role="button" aria-expanded="false" aria-controls="{{ t_id }}_{{ q_id }}">
       {{ item.title }}
     </a>
   </h4>
-  <div id="{{ q_id }}" class="collapse show anchor-spacer expand" role="tabpanel">
+  <div id="{{ t_id }}_{{ q_id }}" class="collapse show anchor-spacer expand" role="tabpanel">
     {{ item.description|safe }}
 
     {% if q_id == "https-1" %}
