--- a/templates/macros/question.html
+++ b/templates/macros/question.html
@@ -15,6 +15,9 @@
       <ul class="list-group list-group-flush">
          <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to this page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
          <li class="list-group-item">
+           {% if item.forum_link %}
+             <a href="{{ item.forum_link }}">{{ _("Read more on the forum") }}</a> -
+           {% endif %}
            <a href="https://gitlab.torproject.org/tpo/web/support/-/edit/main/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
            <a href="https://support.torproject.org/misc/bug-or-feedback/">{{ _("Suggest Feedback") }}</a> -
            <a href="{{ item|url }}">{{ _("Permalink") }}</a>
