--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
 <meta name="description" content="{{ _('Defend yourself against tracking and surveillance. Circumvent censorship.') }} | {{ this.title }}">
 <link rel="stylesheet" href="{{ '/static/css/bootstrap.css'|asseturl }}">
 <link rel="stylesheet" href="{{ '/static/fonts/fontawesome/css/all.min.css'|asseturl }}" rel="stylesheet">
-<script src="{{ '/static/fix-scroll.js'|asseturl }}" ></script>
+<script src="{{ '/static/support.js'|asseturl }}" ></script>
 <!-- Standard favicon -->
 <link rel="icon" type="image/x-icon" href="{{ '/static/images/favicon.ico'|asseturl }}">
 <!-- Recommended favicon format -->
