--- a/templates/glossary.html
+++ b/templates/glossary.html
@@ -25,7 +25,7 @@
             <ul class="list-group list-group-flush">
                <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to item page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
                <li class="list-group-item">
-                 <a href="https://gitlab.torproject.org/tpo/web/support/-/edit/main/content{{ item.path }}/contents.lr">{{ _("Edit item page") }}</a> -
+                 <a href="https://gitlab.torproject.org/tpo/web/support/-/edit/main/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
                  <a href="https://support.torproject.org/misc/bug-or-feedback/">{{ _("Suggest Feedback") }}</a> -
                  <a href="{{ item.path|url(alt=item.alt) }}">{{ _("Permalink") }}</a>
                 </li>
