--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,10 @@
 <link rel="icon" type="image/x-icon" href="{{ '/static/images/favicon.ico'|asseturl }}">
 <!-- Recommended favicon format -->
 <link rel="icon" type="image/png" href="{{ '/static/images/favicon.png'|asseturl }}">
+ {% if bag('alternatives', this.alt, 'direction') == 'text-right' %}
+  <link rel="stylesheet" href="{{ '/static/custom-css/rtl.css'|asseturl }}">
+  {% endif %}
+
 <script>
   function change(event) {
     let btn = event.currentTarget;
