--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
 <!-- Recommended favicon format -->
 <link rel="icon" type="image/png" href="{{ '/static/images/favicon.png'|asseturl }}">
  {% if bag('alternatives', this.alt, 'direction') == 'text-right' %}
-  <link rel="stylesheet" href="{{ '/static/custom-css/rtl.css'|asseturl }}">
+  <link rel="stylesheet" href="{{ '/static/rtl.css'|asseturl }}">
   {% endif %}
 
 <script>
