needed the bidi option as well, to embed the direction. part of tpo/community/l10n#40120

--- a/assets/static/rtl.css
+++ b/assets/static/rtl.css
@@ -2,5 +2,6 @@
     text-align: right !important;
 }
 .content  pre, code {
-    direction: ltr !important;
+    direction: ltr;
+    unicode-bidi: isolate;
 }
