--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,6 +31,7 @@
 <title>{% block title %}{{ this.title }} {{ this.term }} {% endblock %} | {{ _("Tor Project | Support") }}</title>
 
 <body class="no-gutters" data-spy="scroll" data-target="#sidenav-topics" id="topics" data-children=".item">
+  {% include 'banner.html' ignore missing %}
   <header>
     {% include 'navbar.html' %}
   </header>
