--- a/templates/macros/question.html
+++ b/templates/macros/question.html
@@ -19,6 +19,10 @@
              <a href="{{ item.forum_link }}">{{ _("Read more on the forum") }}</a> -
            {% endif %}
            <a href="https://gitlab.torproject.org/tpo/web/support/-/edit/main/content{{ item.path }}/contents.lr">{{ _("Edit this page") }}</a> -
+	   {% if item.alt != "en" %}
+             <a href="https://hosted.weblate.org/zen/tor/support-portal/{{ item.alt }}/?q=+location%3A%22content{{ item.path|safe }}%2Fcontents%22&sort_by=-priority%2Cposition&checksum=">{{ _("Improve this translation") }}</a> - 
+           {% endif %}
+
            <a href="https://support.torproject.org/misc/bug-or-feedback/">{{ _("Suggest Feedback") }}</a> -
            <a href="{{ item|url }}">{{ _("Permalink") }}</a>
           </li>
