no need to translate if we are not using it

--- a/templates/macros/question.html
+++ b/templates/macros/question.html
@@ -13,7 +13,7 @@
     {% endif %}
     <div class="card mt-5">
       <ul class="list-group list-group-flush">
-         <!--li class="list-group-item"><a><span class="card-text text-muted">{{ _("Contributors to this page:") }} <a href="#" title="#">cypherpunk</a></span></li-->
+         <!--li class="list-group-item"><a><span class="card-text text-muted">Contributors to this page: <a href="#" title="#">cypherpunk</a></span></li-->
          <li class="list-group-item">
            {% if item.forum_link %}
              <a href="{{ item.forum_link }}">{{ _("Read more on the forum") }}</a> -
