--- a/templates/macros/gettor.html
+++ b/templates/macros/gettor.html
@@ -3,7 +3,7 @@
   <span class="h5">Email gettor</span>
   <hr style="border: 1px solid var(--primary);">
   <label>
-    Select your operating system:
+    {{ _('Select your operating system:') }}
     <select class="custom-select os-select">
       <option value="windows">{{ _('Windows') }}</option>
       <option value="macos">{{ _('MacOS') }}</option>
