Add icons to the links

--- a/templates/macros/gettor.html
+++ b/templates/macros/gettor.html
@@ -11,9 +11,9 @@
     </select>
   </label>
   <br>
-  <a href="mailto:gettor@torproject.org?body=windows" class="mailto btn btn-primary w-100">{{ _('Click here to email gettor') }}</a>
+  <a href="mailto:gettor@torproject.org?body=windows" class="mailto btn btn-primary w-100"><span class="fa fa-envelope pr-1"></span>{{ _('Click here to email gettor') }}<span class="fa fa-external-link"></span></a>
   <br>
-  <button class="gettor-copy-button btn btn-primary mt-1 w-100"><span class="fa fa-copy pr-1"></span>Copy email link to clipboard</button>
+  <button class="gettor-copy-button btn btn-primary mt-1 w-100"><span class="fa fa-copy pr-1"></span>{{ _('Copy mailto link to clipboard') }}</button>
 </div>
 {% endmacro %}
 
