Move styling to lego

--- a/templates/macros/gettor.html
+++ b/templates/macros/gettor.html
@@ -1,7 +1,7 @@
 {% macro gettor_email() %}
-<div class="p-3 mb-3" style="border: 2px solid var(--primary);">
+<div class="p-3 mb-3">
   <span class="h5">Email gettor</span>
-  <hr style="border: 1px solid var(--primary);">
+  <hr>
   <label>
     {{ _('Select your operating system:') }}
     <select class="custom-select os-select">
