--- a/templates/macros/gettor.html
+++ b/templates/macros/gettor.html
@@ -49,9 +49,13 @@
         div.append(...template.content.children);
       });
       document.querySelectorAll('.gettor-email .os-select').forEach(select => {
-          select.addEventListener('change', (event) => {console.log(event); event.target.parentElement.getElementsByClassName('mailto')[0].href=`mailto:gettor@torproject.org?body=${event.target.value}`;});
+          select.addEventListener('change', (event) => {
+            let mailto = event.target.closest('.gettor-email').getElementsByClassName('mailto')[0];
+            mailto.href=`mailto:gettor@torproject.org?body=${event.target.value}`;
+          });
           select.value = osName;
-          select.parentElement.parentElement.getElementsByClassName('mailto')[0].href=`mailto:gettor@torproject.org?body=${osName}`;
+          let mailto = select.closest('.gettor-email').getElementsByClassName('mailto')[0];
+          mailto.href=`mailto:gettor@torproject.org?body=${osName}`;
         });
   });
 </script>
